[gd_scene load_steps=3 format=3 uid="uid://beqga7dxnmyrg"]

[ext_resource type="Script" uid="uid://bnci0yxx2ki8w" path="res://scenes/ui/components/spell_details.gd" id="1_t85rj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t85rj"]

[node name="SpellDetails" type="Panel"]
custom_minimum_size = Vector2(0, 130)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_t85rj")
script = ExtResource("1_t85rj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ElementsContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
